snippets/k8s/cmp-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nginx-test2
  name: nginx-test2
  labels:
    app: nginx-test2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-test2
  template:
    metadata:
      labels:
        app: nginx-test2
    spec:
      containers:
      - name: nginx-test2
        image: nginx:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
            - name: nginx-index-file
              mountPath: /usr/share/nginx/html/
        ports:
        - containerPort: 80
          protocol: TCP
      volumes:
      - name: nginx-index-file
        configMap:
          name: index-html-configmap
